[gd_scene load_steps=14 format=3 uid="uid://h5ooflav8yup"]

[ext_resource type="Script" uid="uid://bet2ludr1wqmx" path="res://ui/level/pause_menu.gd" id="1_50142"]
[ext_resource type="PackedScene" uid="uid://b8oc3p24hynli" path="res://audio/sfx/ui_sfx.tscn" id="2_6bm6f"]
[ext_resource type="FontFile" uid="uid://b354cldnji4jc" path="res://assets/fonts/Quantico/Quantico-BoldItalic.ttf" id="2_avurv"]
[ext_resource type="Theme" uid="uid://bdukti3wo6tch" path="res://assets/themes/ui_menu_theme.tres" id="3_fob5h"]
[ext_resource type="StyleBox" uid="uid://sxwbs5al0nli" path="res://assets/themes/btn_bg_normal.tres" id="4_j3kxr"]
[ext_resource type="StyleBox" uid="uid://c5245q3vo46do" path="res://assets/themes/btn_bg_pressed.tres" id="5_vovkw"]
[ext_resource type="StyleBox" uid="uid://bm1hufi44t4oo" path="res://assets/themes/btn_bg_hover.tres" id="6_jyvtb"]
[ext_resource type="PackedScene" uid="uid://i25ni6j2vywn" path="res://ui/level/settings_menu.tscn" id="7_1br0k"]

[sub_resource type="Animation" id="Animation_d4see"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(-1213, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PauseContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(-859, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingsMenu:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(-1213, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SettingsMenu:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(-859, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_xv7ky"]
resource_name = "open_pause"
length = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(-1213, 0, 0, 0.033333335, 202.16667, 0, -0.1, -11.0248165, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PauseContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(-859, 0, 0, 0.033333335, 143.16667, 0, -0.1, -4.297311, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingsMenu:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(-1213, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SettingsMenu:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(-859, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_7kfo8"]
resource_name = "open_settings"
length = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.06666667, 1181.2123, 1213, -0.1, -14.338257, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PauseContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.06666667, 681.9081, 690, -0.1, -1.3644409, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingsMenu:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(-1213, 0, 0, 0.033333335, 202.16667, 0, -0.06666666, -1207.839, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SettingsMenu:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(-859, 0, 0, 0.033333335, 143.16667, 0, -0.06666666, -689.82135, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d4see"]
_data = {
&"RESET": SubResource("Animation_d4see"),
&"open_pause": SubResource("Animation_xv7ky"),
&"open_settings": SubResource("Animation_7kfo8")
}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ejwgg"]
color = Color(0.096800014, 0.88, 0.29259998, 1)
thickness = 4

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_50142")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d4see")
}

[node name="UISFX" parent="." instance=ExtResource("2_6bm6f")]

[node name="PauseContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1213.0
offset_top = -859.0
offset_right = -1212.9971
offset_bottom = -858.99817
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 127
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 128

[node name="Panel" type="ColorRect" parent="PauseContainer"]
layout_mode = 2
color = Color(0.19199999, 0.5504, 0.96, 0.6666667)

[node name="MarginContainer" type="MarginContainer" parent="PauseContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 96
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="PauseContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_fonts/font = ExtResource("2_avurv")
theme_override_font_sizes/font_size = 72
text = "PAUSE MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PauseContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxLine_ejwgg")

[node name="ResumeBtn" type="Button" parent="PauseContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../MenuBtn")
focus_neighbor_bottom = NodePath("../SettingsBtn")
focus_next = NodePath("../SettingsBtn")
focus_previous = NodePath("../MenuBtn")
theme = ExtResource("3_fob5h")
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_colors/font_focus_color = Color(0.28, 0.08680002, 0.028000006, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.30659997, 0.12599999, 1)
theme_override_colors/font_hover_color = Color(0.28, 0.08680002, 0.028000006, 1)
theme_override_styles/normal = ExtResource("4_j3kxr")
theme_override_styles/pressed = ExtResource("5_vovkw")
theme_override_styles/hover = ExtResource("6_jyvtb")
text = "RESUME"

[node name="SettingsBtn" type="Button" parent="PauseContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeBtn")
focus_neighbor_bottom = NodePath("../MenuBtn")
focus_next = NodePath("../MenuBtn")
focus_previous = NodePath("../ResumeBtn")
theme = ExtResource("3_fob5h")
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_colors/font_focus_color = Color(0.28, 0.08680002, 0.028000006, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.30659997, 0.12599999, 1)
theme_override_colors/font_hover_color = Color(0.28, 0.08680002, 0.028000006, 1)
theme_override_styles/normal = ExtResource("4_j3kxr")
theme_override_styles/pressed = ExtResource("5_vovkw")
theme_override_styles/hover = ExtResource("6_jyvtb")
text = "SETTINGS"

[node name="MenuBtn" type="Button" parent="PauseContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../SettingsBtn")
focus_neighbor_bottom = NodePath("../ResumeBtn")
focus_next = NodePath("../ResumeBtn")
focus_previous = NodePath("../SettingsBtn")
theme = ExtResource("3_fob5h")
theme_override_colors/font_color = Color(0.48, 0.1856, 0.09599999, 1)
theme_override_colors/font_focus_color = Color(0.28, 0.08680002, 0.028000006, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.30659997, 0.12599999, 1)
theme_override_colors/font_hover_color = Color(0.28, 0.08680002, 0.028000006, 1)
theme_override_styles/normal = ExtResource("4_j3kxr")
theme_override_styles/pressed = ExtResource("5_vovkw")
theme_override_styles/hover = ExtResource("6_jyvtb")
text = "MENU"

[node name="SettingsMenu" parent="." instance=ExtResource("7_1br0k")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -1213.0
offset_top = -859.0
offset_right = -13.0
offset_bottom = -19.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="focus_entered" from="PauseContainer/Panel/MarginContainer/VBoxContainer/ResumeBtn" to="." method="_handle_element_focused"]
[connection signal="pressed" from="PauseContainer/Panel/MarginContainer/VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="focus_entered" from="PauseContainer/Panel/MarginContainer/VBoxContainer/SettingsBtn" to="." method="_handle_element_focused"]
[connection signal="pressed" from="PauseContainer/Panel/MarginContainer/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="focus_entered" from="PauseContainer/Panel/MarginContainer/VBoxContainer/MenuBtn" to="." method="_handle_element_focused"]
[connection signal="pressed" from="PauseContainer/Panel/MarginContainer/VBoxContainer/MenuBtn" to="." method="_on_menu_btn_pressed"]
[connection signal="closed" from="SettingsMenu" to="." method="_on_settings_menu_closed"]
